templates/ingress.yaml
{ { - if .Values.ingress.enabled } }
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: { { .Values.appName } }
spec:
  ingressClassName: nginx
  rules:
    - host: { { .Values.ingress.host } }
      http:
        paths:
          - backend:
              service:
                name: { { .Values.appName } }
                port:
                  number: { { .Values.ingress.port } }
            path: /
            pathType: Prefix
  { { - end } }
